# Essay_Generator_AI_Agentic_System

./: .gitignore  app.py  generate_essay.py  main.py  output.md  pyproject.toml
agents/: analyzer_agent.py  image_agent.py  layout_agent.py  research_agent.py  writer_agent.py
config/: keys.py  model.py
scratch/: test_generate_essay.py  test_image_agent.py
tools/: image_tool.py  research_tool.py
